--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -2,11 +2,10 @@
 <html lang="en-US">
   <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   </head>
   <body>
     {{ include("header.twig") }}
     {% block body %}{% endblock %}
-    {{ include("snippet.twig") }}
-    {% block js %}{% endblock %}
   </body>
 </html>
