--- a/templates/header.twig
+++ b/templates/header.twig
@@ -1,8 +1,34 @@
 <header>
-  <ul>
-    <li><a href="http://www.journy.app/">Home</a></li>
-    <li><a href="http://www.journy.app/pricing">Pricing</a></li>
-    <li><a href="http://sub.www.journy.app/sign-up">Sign Up</a></li>
-    <li><a href="http://www.journy.app/ebooks">Ebooks</a></li>
-  </ul>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="container">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          Shop Manager
+        </a>
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+      <div id="navbar" class="navbar-menu">
+        <div class="navbar-end">
+          {% if user %}
+          <div class="navbar-item">
+            <p>Logged in as {{ user.first_name|e }} {{ user.last_name|e }}</p>
+          </div>
+          {% endif %}
+          <div class="navbar-item">
+            <div class="buttons">
+              {% if user %}
+                <form action="/logout" method="POST">
+                  <button class="button is-light" type="submit">Logout</button>
+                </form>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
 </header>
